// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Overview -> View should render when historical data is found 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="m"
>
  <ServiceListRequest
    render={[Function]}
  />
</EuiPanel>
`;

exports[`Service Overview -> View should render when historical data is found 2`] = `
Object {
  "items": Array [],
  "noItemsMessage": <NoServicesMessage
    historicalDataFound={true}
  />,
}
`;

exports[`Service Overview -> View should render when historical data is not found 1`] = `
<EuiPanel
  grow={true}
  hasShadow={false}
  paddingSize="m"
>
  <ServiceListRequest
    render={[Function]}
  />
</EuiPanel>
`;

exports[`Service Overview -> View should render when historical data is not found 2`] = `
Object {
  "items": Array [],
  "noItemsMessage": <NoServicesMessage
    historicalDataFound={false}
  />,
}
`;
